@@ -1,7 +1,8 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.fluidpressureandflow.common.view;
 
-import javax.swing.BoxLayout;
+import java.awt.GridBagConstraints;
+import java.awt.GridBagLayout;
 
 import edu.colorado.phet.common.phetcommon.view.PhetTitledPanel;
 import edu.colorado.phet.common.phetcommon.view.controls.PropertyRadioButton;
@@ -9,7 +10,6 @@ import edu.colorado.phet.common.phetcommon.view.util.SwingUtils;
 import edu.colorado.phet.fluidpressureandflow.pressure.view.FluidPressureControlPanel;
 
 import static edu.colorado.phet.fluidpressureandflow.FluidPressureAndFlowResources.Strings.UNITS;
-import static javax.swing.BoxLayout.Y_AXIS;
 
 /**
  * Control panel to choose between different sets of units with radio buttons.
@@ -19,10 +19,21 @@ import static javax.swing.BoxLayout.Y_AXIS;
 public class EnglishMetricControlPanel extends PhetTitledPanel {
     public EnglishMetricControlPanel( PropertyRadioButton... buttons ) {
         super( UNITS );
-        setLayout( new BoxLayout( this, Y_AXIS ) );
+
+        //Box layout fails here, see #3301
+        setLayout( new GridBagLayout() );
+        final GridBagConstraints constraints = new GridBagConstraints() {{
+            gridx = 0;
+            gridy = RELATIVE;
+            anchor = WEST;
+        }};
         for ( PropertyRadioButton button : buttons ) {
-            add( button );
+            add( button, constraints );
         }
         SwingUtils.setForegroundDeep( this, FluidPressureControlPanel.FOREGROUND );
+    }
+
+    @Override public void doLayout() {
+        super.doLayout();
     }
 }
