@@ -45,7 +45,7 @@ public class FluidFlowModel extends FluidPressureAndFlowModel implements Velocit
     public FluidFlowModel() {
         super( UnitSet.METRIC );
         getClock().addSimulationTimeChangeListener( new VoidFunction1<Double>() {
-            @Override public void apply( final Double dt ) {
+            public void apply( final Double dt ) {
                 if ( dt > 0 ) { stepInTime( dt ); }
             }
         } );
